# bibiman

./: .gitignore  Cargo.toml  README.md  build.rs  devbox.json.back  plainfile  test.bib
src/: app.rs  backend.rs  bib.rs  bibiman.rs  cliargs.rs  errorsetup.rs  frontend.rs  main.rs  tui.rs
src/backend/: bib.rs  cliargs.rs  search.rs
src/bib/: entries.rs
src/bibiman/: bibisetup.rs  entries.rs  keywords.rs  search.rs
src/frontend/: app.rs  entries.rs  event.rs  handler.rs  keywords.rs  tui.rs  ui.rs
src/tui/: app.rs  colors.rs  command.rs  commandnew.rs  commands.rs  handler.rs  popup.rs  ui.rs
tests/: biblatex-test.bib
tests/multi-files/: bibfile1.bib  bibfile2.bib
