[package]
name = "bibiman"
version = "0.6.4"
authors = ["lukeflo <lukeflo_git@posteo.de>"]
license = "GPL-3.0-or-later"
edition = "2021"

[profile.release-git]
inherits = "release"
lto = "fat"

[dependencies]
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
biblatex = "0.10.0"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
editor-command = "0.1.1"
futures = "0.3.30"
itertools = "0.13.0"
nucleo-matcher = "0.3.1"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"]}
sarge = "7.2.5"
signal-hook = "0.3.17"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = "0.7.12"
tui-input = "0.11.0"
