[package]
name = "bibiman"
version = "0.8.2"
authors = ["lukeflo <lukeflo_git@posteo.de>"]
license = "GPL-3.0-or-later"
repository = "https://codeberg.org/lukeflo/bibiman"
readme = "README.md"
description = "TUI for interacting with BibLaTeX databases"
keywords = ["tui", "biblatex", "bibliography", "bibtex", "latex"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["/tests", ".*"]

[profile.release-git]
inherits = "release"
lto = "fat"

[dependencies]
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
biblatex = "0.10.0"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "5.0.1"
doi2bib = "0.2.0"
# doi = "0.3.0"
editor-command = "0.1.1"
futures = "0.3.30"
rand = "0.8"
itertools = "0.13.0"
lexopt = "0.3.0"
nucleo-matcher = "0.3.1"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"]}
signal-hook = "0.3.17"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = "0.7.12"
tui-input = "0.11.0"
walkdir = "2.5.0"
